--- a/templates/front/header.html.twig
+++ b/templates/front/header.html.twig
@@ -8,7 +8,10 @@
         <ul>
           <li  >
             <a class="active-link " href="{{ path('app_index') }}"
-              ><img
+              > 
+  
+  
+              <img
                 src="{{ asset('assets/images/flaticon/accueil.png') }}"
                 alt="Accueil logo image"
               >Accueil</a>
