--- a/templates/front/index.html.twig
+++ b/templates/front/index.html.twig
@@ -14,6 +14,7 @@
 			</div>
 {% endif %}
   <div  class="home  m-5  d-flex justify-content-center">
+ 
   <img src="{{ asset('assets/images/b.jpg') }}" alt="" class="img-fluid">
     <div class="content ">
      
@@ -65,7 +66,7 @@
         <div class="write-section col-lg-6 col-md-12 py-5 ">
           <h3 class="text-black p-3">Apprendre et Jouer Avec Nous!</h3>
         
-          <p >Apprenez l'arabe pour les enfants en ligne grâce aux vidéos, chansons, histoires , et plain des activités pratiques.
+          <p >Apprenez l'arabe aux enfants en ligne grâce aux vidéos, chansons, histoires , et plain des activités pratiques.
 
             Grâce à notre méthode d'auto-apprentissage, les enfants peuvent apprendre l'arabe à leur rythme,
             n'importe quand, n'importe où.
@@ -84,7 +85,7 @@
   <div class="fun-section ">
     <div class="container-fun ">
         <div class="heading">
-          <h2 class="title-fun">Allons nous s'amuser</h2>
+          <h2 class="title-fun">Allons nous amuser</h2>
         </div>
       
       
