--- a/templates/front/methode.html.twig
+++ b/templates/front/methode.html.twig
@@ -6,7 +6,7 @@
 
 <h1 class="text-center py-5">Découvrir notre méthode</h1>
 <div class="testimonial container-methode pl-4">
-<p >Enseigner un enfant doit suivre des méthodes simplifiées et bien-aimées afin qu'il puisse continuer à apprendre sans s'ennuyer.<br>
+<p >L'enseignement d'un enfant doit suivre des méthodes simples et ludiques afin qu'il puisse continuer à apprendre sans s'ennuyer.<br>
  Des études ont montré qu'apprendre en écoutant et en regardant accélère le processus éducatif.<br> C'est pourquoi j'ai voulu afficher sur le site des leçons vidéo et diverses activités pour acquérir les compétences nécessaires.</p>
 <p>Bien sûr, l'utilisation de vidéos peut être un outil efficace pour enseigner l'arabe aux enfants.<br> 
  {% for category in categories  %}
