--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Enseigner l'arabe aux enfants français :  apprendre de la langue arabe  à travers des leçons ludiques, des chansons,des histoires des activités manuelles et coloriages des lettres arabes ">
   <meta name="keywords" lang="fr" content="apprendre l'arabe, enfants, langue arabe, , activités manuelles,coloriage lettres arabes,chansons,histoires,leçons ludiques">
-   <meta name="ROBOTS" content="index, follow, all" > 
+   <meta name="ROBOTS" content="index, follow" > 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>
   {% block title %}Enseigner l'arabe aux enfants français{% endblock %}
