--- a/templates/front/mentions.html.twig
+++ b/templates/front/mentions.html.twig
@@ -7,12 +7,12 @@
 
 <h1 class="text-center py-5">conditions générales d'utilisation</h1>
 <div class="testimonial">
-<h3>Article 1 : Les mentions légales</h3>
+<h3>Les mentions légales</h3>
 <p>L’édition et la direction de la publication du site francoarabophone.fr est assurée par Caroline Al Salloum, domicilié 33Rue elsa triolet.
 Adresse e-mail info@francoarabophone.com.
 
 L'hébergeur du site francoarabophone.fr est la société ionos, dont le siège social est situé au 7 PL DE LA GARE 57200 SARREGUEMINES, avec le numéro de téléphone : 0970 808 911.</p>
-<h3>Article 2 : Accès au site</h3>
+<h3> Accès au site</h3>
 <p>Le site francoarabophone.fr  permet aux utilisateurs d'acceder aux védios  pour apprendre l'arabe facilement :
 Le site est accessible gratuitement en tout lieu à tout Utilisateur ayant un accès à Internet. Tous les frais supportés par l'Utilisateur pour accéder au service (matériel informatique, logiciels, connexion Internet, etc.) sont à sa charge.
 
@@ -24,14 +24,14 @@ L'Utilisateur a la possibilité de contacter le site par messagerie électroniqu
 
 
  
-<h3>Article 3 : Responsabilité</h3>
+<h3>Responsabilité</h3>
 <p>Les sources des informations diffusées sur le site francoarabophone.fr sont réputées fiables mais le site ne garantit pas qu’il soit exempt de défauts, d’erreurs ou d’omissions.
 Les informations communiquées sont présentées à titre indicatif et général sans valeur contractuelle. Malgré des mises à jour régulières, le site francoarabophone.fr ne peut être tenu responsable de la modification des dispositions administratives et juridiques survenant après la publication. De même, le site ne peut être tenue responsable de l’utilisation et de l’interprétation de l’information contenue dans ce site.
 L'Utilisateur s'assure de garder son mot de passe secret. Toute divulgation du mot de passe, quelle que soit sa forme, est interdite. Il assume les risques liés à l'utilisation de son identifiant et mot de passe. Le site décline toute responsabilité.
 Le site francoarabophone.fr ne peut être tenu pour responsable d’éventuels virus qui pourraient infecter l’ordinateur ou tout matériel informatique de l’Internaute, suite à une utilisation, à l’accès, ou au téléchargement provenant de ce site.
 La responsabilité du site ne peut être engagée en cas de force majeure ou du fait imprévisible et insurmontable d'un tiers.
 </p>
-<h3>Article 4 : Publication par l’Utilisateur</h3>
+<h3> Publication par l’Utilisateur</h3>
 <p>Le site permet aux membres de publier les contenus suivants :
 avis.
 Dans ses publications, le membre s’engage à respecter les règles de la Netiquette (règles de bonne conduite de l’internet) et les règles de droit en vigueur.
